Refactored the modules

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include zeus_agent *.py
+recursive-include samantha *.py
 include README.md
 include *.py
 include *.txt
@@ -10,7 +10,7 @@ recursive-include docs *.md
 
 global-exclude *.swp
 
-recursive-exclude zeus_agent *.pyc
+recursive-exclude samantha *.pyc
 recursive-exclude .circleci *.yml
 
 prune config
