--- a/.coveragerc
+++ b/.coveragerc
@@ -11,3 +11,11 @@ exclude_lines =
 
 show_missing = 1
 omit = */tests/*
+ignore_errors = True
+
+[html]
+directory = coverage_html_report
+
+[xml]
+output = coverage.xml
+
