--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coveralls
+  - pip install flake8
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
