--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,build,dist,upload.py,src,docs
+exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,build,dist,upload.py,src,docs,__init__.py
 ignore=E126,E402,E128
 max-line-length=90
 max-complexity=10
