--- a/.coveragerc
+++ b/.coveragerc
@@ -10,7 +10,7 @@ exclude_lines =
     raise NotImplementedError
 
 show_missing = 1
-omit = */tests/*,*/listeners/*
+omit = */tests/*,*/listeners/*,*/responder/*
 ignore_errors = True
 
 [html]
