--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,build,dist,upload.py,src,docs,__init__.py
-ignore=E126,E402,E128
+ignore=E126,E402,E128,E722
 max-line-length=90
 max-complexity=10
 
