--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,60 @@
-bleach
-certifi
-chardet
-check-manifest
-docutils
-idna
-pkginfo
-Pygments
-readme-renderer
-requests
-requests-toolbelt
-six
-tqdm
-twine
-urllib3
-webencodings
-slackclient
-asyncio
-dialogflow
-ansible
+aiodns==2.0.0
+aiohttp==3.5.4
+ansible==2.8.1
+asn1crypto==0.24.0
+async-timeout==3.0.1
+asyncio==3.4.3
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
+cachetools==3.1.1
+certifi==2019.3.9
+cffi==1.12.3
+chardet==3.0.4
+check-manifest==0.39
+cryptography==2.7
+decorator==4.4.0
+dialogflow==0.6.0
+docutils==0.14
+google-api-core==1.11.1
+google-auth==1.6.3
+googleapis-common-protos==1.6.0
+grpcio==1.21.1
+idna==2.8
+idna-ssl==1.1.0
+ipython==7.5.0
+ipython-genutils==0.2.0
+jedi==0.13.3
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+multidict==4.5.2
+parso==0.4.0
+pexpect==4.7.0
+pickleshare==0.7.5
+pkginfo==1.5.0.1
+prompt-toolkit==2.0.9
+protobuf==3.8.0
+ptyprocess==0.6.0
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycares==3.0.0
+pycparser==2.19
+Pygments==2.4.2
+pytz==2019.1
+PyYAML==5.1.1
+readme-renderer==24.0
+requests==2.22.0
+requests-toolbelt==0.9.1
+rsa==4.0
+six==1.12.0
+slackclient==2.0.1
+toml==0.10.0
+tqdm==4.32.1
+traitlets==4.3.2
+twine==1.13.0
+typing==3.6.6
+typing-extensions==3.7.2
+urllib3==1.25.3
+wcwidth==0.1.7
+webencodings==0.5.1
+yarl==1.3.0
