--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,6 +17,9 @@ include .coveragerc
 recursive-include docs *.md
 recursive-include docs *.py
 recursive-include docs *.txt
+recursive-include docs *.jpg
+recursive-include docs *.png
+recursive-include docs *.xml
 include *.json
 
 global-exclude *.swp
