--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -21,6 +21,7 @@ recursive-include docs *.jpg
 recursive-include docs *.png
 recursive-include docs *.xml
 include *.json
+include *.yml
 
 global-exclude *.swp
 
