--- a/iaac/ansible.cfg
+++ b/iaac/ansible.cfg
@@ -9,9 +9,12 @@
 [defaults]
 log_path = /var/log/ansible.log
 retry_files_enabled = False
-display_args_to_stdout = True
+display_args_to_stdout = False
 forks = 10
 no_log = False
+callback_whitelist = custom
+bin_ansible_callbacks = True
+callback_plugins= ~/.ansible/plugins/callback:/usr/share/ansible/plugins/callback:/samantha/iaac/callback_plugins
 
 remote_user = samantha
 remote_tmp = /tmp/.ansible-${USER}
