--- a/iaac/roles/fetch_log/tasks/main.yml
+++ b/iaac/roles/fetch_log/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 - name: Getting the log file
   become: yes
+  become_user: root
   debug:
     var: item
   with_file:
-    - '{{ log_file }}'
+    - /var/log/yoyo
