Returning stats for playbook

--- a/iaac/ansible.cfg
+++ b/iaac/ansible.cfg
@@ -13,6 +13,7 @@ display_args_to_stdout = False
 forks = 10
 no_log = False
 callback_whitelist = custom
+# stdout_callback = custom
 bin_ansible_callbacks = True
 callback_plugins= ~/.ansible/plugins/callback:/usr/share/ansible/plugins/callback:/samantha/iaac/callback_plugins
 
