Make ansible runs optimized and faster

--- a/iaac/ansible.cfg
+++ b/iaac/ansible.cfg
@@ -10,9 +10,18 @@
 log_path = /var/log/ansible.log
 retry_files_enabled = False
 display_args_to_stdout = False
-forks = 10
+forks = 20
 no_log = False
+pipeline = True
 callback_whitelist = custom
+
+# facts gathering optimization
+gathering = smart
+fact_caching_timeout = 86400
+fact_caching = jsonfile
+# other available caching: memcached, redis
+fact_caching_connection = /tmp/ansible_fact_cache
+
 # stdout_callback = custom
 bin_ansible_callbacks = True
 callback_plugins= ~/.ansible/plugins/callback:/usr/share/ansible/plugins/callback:/samantha/iaac/callback_plugins
