Fix Manifest file

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,11 @@ ignore =
     .coveralls.yml
     *.pyc
     *.swp
+    Vagrantfile
+    .vault_password.txt
+    app_config.yml
+    credentials.json
+    test.py
 
 [metadata]
 description-file = README.md
